# PathCoverage

./: .gitignore  README.md  main.py  manual_verification_scatter.py  pyproject.toml  spec_transition_metrics_compare.py
docs/: output-structure-zh.md
path/EX10/1-1/: 20260322_004815_1lrcrf.json  20260322_005122_jti4ku.json
path/EX10/1-2/: 20260322_005651_pbh8oc.json
path/EX10/1-3/: 20260322_004855_hnvomq.json
path/EX10/1-4/: 20260322_005622_w6w9nt.json  20260322_005630_sog6jw.json  20260322_005905_gsvs1k.json
path/EX10/1-5/: 20260322_005144_7t8uyo.json
path/EX10/2-1/: 20260322_002938_0t939v.json  20260322_003150_j2l0fu.json  20260322_004114_mkm896.json
path/EX10/2-2/: 20260322_005304_zjyt42.json
path/EX10/2-3/: 20260322_003051_epcfrm.json  20260322_003358_2gl010.json
path/EX10/2-4/: 20260322_002913_64ofbg.json  20260322_003249_hulgox.json
path/EX10/2-5/: 20260322_002935_lyp9zx.json  20260322_003207_knjn3z.json  20260322_003839_ua0zoz.json  (+2 more)
path_coverage/: __init__.py  application.py  common.py  coverage.py  graph_loader.py  input_resolver.py  models.py  path_loader.py  plotter.py  service.py  settings.py  sorter.py
path_coverage/analysis/: __init__.py  aggregators.py  metrics.py  project_runner.py  scoreboard.py  snapshots.py
path_coverage/charts/: __init__.py  bar_charts.py  base.py  common.py  line_charts.py  scatter_charts.py
path_coverage/outputs/: __init__.py  json_writers.py
每個專案的 32 Path整理/: 1-1.json  1-2.json  1-3.json  1-4.json  1-5.json  2-1.json  2-2.json  2-3.json  2-4.json  2-5.json  3-1.json  3-2.json  3-3.json  3-4.json  3-5.json
(+820 files in other folders)
