[project]
name = "path-coverage"
version = "0.1.0"
description = "Aggregate planner path JSON files, sort them by incremental coverage, and generate coverage charts."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "matplotlib>=3.9,<4",
  "seaborn>=0.13,<0.14",
]

[tool.uv]
package = false